# Crisp

./: .travis.yml  CMakeLists.txt  README.md
cmake/: FindClang.cmake
include/crisp/: ClangPrologQueries.h  PrologPredBaseTemplates.h  PrologPredDeclarationMacros.h  PrologPredDefinitionMacros.h  PrologPredRegistrationMacros.h  PrologPredTemplatesForClangTypes.h  PrologUtilityFunctions.h  RunPrologEngine.h
lib/CrispClangPlugin/: CMakeLists.txt  ClangPrologPredicateRegistration.h  ClangPrologPredicates.cpp  ClangPrologPredicates.h  CompilationInfo.h  CrispASTAction.cpp
lib/CrispLLVMPass/: CMakeLists.txt  CrispModulePass.cpp  LLVMCompilationInfo.cpp  LLVMCompilationInfo.h  LLVMDeclarations.cpp  LLVMPrologPredicateRegistration.h  LLVMPrologPredicates.cpp  LLVMPrologPredicates.h  LLVMPrologQueries.h
lib/DeclExtractor/: CMakeLists.txt  DeclExtractorPrologPredicateRegistration.h  DeclExtractorPrologPredicates.h
lib/PrologEngineWrapper/: CMakeLists.txt  RunPrologEngine.cpp
prolog/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg
test/SomeHICPPrules/: hicpp_3_3_13.cpp
